syntax = "proto3";
package chk.payloads;

option go_package = "checkers-backend/payloads";

message BasePayload {
  // GUI display text from server to client
  optional string notice = 2;

  oneof inner {
    WelcomePayload welcome = 5;
    MovePayload move_payload = 4;
    StartPayload start_payload = 6;
  }
}

enum TeamColor {
  TEAM_UNSPECIFIED = 0;
  TEAM_RED = 1;
  TEAM_BLACK = 2;
}

message WelcomePayload {
  // Define the Welcome message fields here
  TeamColor my_team = 1;
}

message StartPayload {
  // Pieces for red player
  repeated int32 pieces_red = 1;
  // pieces for black player
  repeated int32 pieces_black = 2;
}

message MovePayload {
  // Define the Move message fields here
  message DestCell {
    int32 cell_index = 1;
    float x = 2;
    float y = 3; 
  }
  TeamColor from_team = 1;
  int32 piece_id = 2;
  DestCell dest_cell = 3;
}

